# DiskGen

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Notebooks/: Example.ipynb  FitsViewer.ipynb  Hammer.ipynb  Model.ipynb  ModelCheck.ipynb  Profiles.ipynb  Profiles2.ipynb  Profiles3.ipynb  Simulations_Profile.ipynb  Test_profile.ipynb  Visualizer.ipynb  test.ipynb  test_profile_pipeline_clean.ipynb
Notebooks/FitsGenerator/Final/: Fits_Generator.ipynb
Notebooks/FitsGenerator/Working/: Final_Model.ipynb  Fits_Generator_Linear.ipynb  Fits_Generator_Random.ipynb
Notebooks/Misc/: FitsViewer.ipynb  Hammer.ipynb  Hammer_fast.ipynb  Model.ipynb  Simulations_Profile.ipynb  Test_emcee.ipynb  Visualizer.ipynb
Notebooks/RealFitsAnalysis/: FitsViewer.ipynb  Real_Hammer_masked.ipynb
src/diskgen/: diskprofile.py  image.py  io_utils.py  plotting.py  profile.py
