[project]
name = "diskgen"
version = "0.1.0"
description = "A Python package for generating synthetic disk data."
authors = [
  { name="Tommaso", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
  "astropy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["diskgen*"]